--- a/style.css
+++ b/style.css
@@ -563,3 +563,47 @@ button, .btn {
 .panier-link:hover {
   background: #ff1e27;
 }
+.main-header {
+  background: linear-gradient(to bottom, #0b0b0b, #000);
+  padding: 20px 40px;
+}
+
+.header-container {
+  max-width: 1200px;
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.logo {
+  font-size: 28px;
+  font-weight: 800;
+  letter-spacing: 1px;
+}
+
+.logo-main {
+  color: #ffffff;
+}
+
+.logo-accent {
+  color: #e50914;
+  margin-left: 4px;
+}
+
+.main-nav a {
+  color: #ffffff;
+  margin-left: 25px;
+  text-decoration: none;
+  font-weight: 500;
+}
+
+.main-nav a:hover {
+  color: #e50914;
+}
+
+.panier-link {
+  background: #e50914;
+  padding: 8px 14px;
+  border-radius: 6px;
+}
